2004-07-29  John Finlay  <finlay@moeraki.com>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_insert_before)
	(_wrap_gtk_list_store_insert_after) Allow sibling to be None.
	Fixes #148751 (Steve Chaplin)

	* gtk/pygtktreemodel.c Fix reference leaks. Fixes#148748. Thanks
	to Tim Evans.

2004-07-29  Johan Dahlin  <johan@gnome.org>

	* tests/gtype.py (GTypeTest.checkType): Use
	gobject.type_name,type_from_name for testing instead of GtkListStore.

2004-07-28  John Finlay  <finlay@moeraki.com>

	* gtk/gtktreeview.override (_wrap_gtk_tree_view_get_cursor)
	(_wrap_gtk_tree_sortable_get_sort_column_id)
	(_wrap_gtk_tree_view_get_drag_dest_row)
	(_wrap_gtk_tree_view_get_dest_row_at_pos)
	Fix reference leaks.

	* gtk/gtk.override (_wrap_gtk_box_query_child_packing)
	(_wrap_gtk_notebook_query_tab_label_packing)
	(_wrap_gtk_tooltips__get_active_tips_data)
	(_wrap_gtk_tooltips__get_tips_data_list)
	(_wrap_gtk_image_get_pixmap) (_wrap_gtk_image_get_image)
	(_wrap_gtk_image_get_stock) (_wrap_gtk_image_get_icon_set)
	(_wrap_gtk_scrolled_window_get_policy)
	(_wrap_gtk_tooltips_data_get) (_wrap_gtk_accel_map_lookup_entry)
	Fix reference leaks.

	* pango.override (pypango_attr_iterator_get_font)
	Fix reference leaks.

2004-07-28  Johan Dahlin  <johan@gnome.org>

	* gobject/pygenum.c (pyg_enum_compare): 
	* gobject/pygflags.c (pyg_flags_compare): Reverse operator, it was
	wrong before, spotted by Abel Daniel

	* tests/enum.py (FlagsTest.testComparision) 
	(FlagsTest.testComparision): New tests

	* gobject/pygtype.c (pyg_type_from_object): If we're on python
	2.3, also check for PyBool_Type. Fixes #148684 (Steve Chaplin)

	* tests/gtype.py (GTypeTest.testBoolType): New test

2004-07-27  John Finlay  <finlay@moeraki.com>

	* gtk/gtk-types.c (pygdk_atom_compare) Remove.
	(pygdk_atom_richcompare) Implement with comparison to strings.
	(PyGdkAtom_Type) Set tp_compare to 0 and tp_richcompare to
	pygdk_atom_richcompare.
	Allow an Atom to be compared with a string. Fixes #148564.
