@@ -1,3 +1,11 @@
+2004-06-14  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	Reviewed by: Johan Dahlin  <johan@gnome.org>:
+	
+	* codegen/h2def.py (write_func): only remove the first occurence of
+	the object name, we don't want to mess up the function name, 
+	fixes bug 144363
+
 2004-07-29  John Finlay  <finlay@moeraki.com>
 
 	* gtk/gtktreeview.override (_wrap_gtk_list_store_insert_before)
